--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,17 @@
             <artifactId>apache-poi-ooxml</artifactId>
             <version>62</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.13.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.13.3</version>
+        </dependency>
     </dependencies>
 
 </project>
